Do the same thing for stat64_copyout() as we already do for newstat_copyout().

Lie about disk drives which are character devices
in FreeBSD but block devices under Linux.

PR:		37227
Submitted by:	Vladimir B. Grebenschikov <vova@sw.ru>
Reviewed by:	phk
MFC after:	2 weeks


git-svn-id: svn+ssh://svn.freebsd.org/base/head@114214 ccf9f872-aa2e-dd11-9fc8-001c23d0bc1f